--- a/public/output.css
+++ b/public/output.css
@@ -546,6 +546,9 @@
   .justify-end {
     justify-content: flex-end;
   }
+  .overflow-hidden {
+    overflow: hidden;
+  }
   .alert-success {
     border-color: var(--color-success);
     color: var(--color-success-content);
